[tool.poetry]
name = "ecgs-service"
version = "0.1.0"
description = "ECGs service"
authors = ["Txema Bermudez <txema.bermudez@gmail.com>"]
readme = "README.md"
packages = [{ include = "ecgs_service" }]

[tool.poetry.dependencies]
python = "3.10.7"
fastapi = "0.85.1"
pytest = "^7.1.3"
sqlmodel = "^0.0.8"


[tool.poetry.group.dev.dependencies]
pytest = "7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
